<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="public_key">sbpb_ZjhmNmYxNGMtOThlNy00OWRmLTljMzYtZWRjMGJmZGE4Njdl</string>
    <string name="private_key">KychZDSxOO7RhkSXSirAbOw4O/xNS2ATM+aeKwThmcR5YFFQL0ODSXAOkNtXTToq</string>

    <string name="app_name">BidEx</string>
    <string name="title_payment">Payment</string>
    <string name="title_login">Login</string>
    <string name="title_sign">Sign up</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_login">Login</string>
    <string name="action_settings">Settings</string>
    <string name="deal_title">Sample Title That Turns out To be Really Long?</string>
    <string name="deal_description">Sample detail</string>
    <string name="top_bid_number">$-</string>
    <string name="top_bid_text">TOP BID</string>
    <string name="bid_button">BID</string>
    <string name="bid_amount">+$100</string>
    <string name="time_left_number">0:00</string>
    <string name="time_left_text">TIME LEFT</string>
    <string name="total_bidder_number">0</string>
    <string name="total_bidder_text">TOTAL BIDS</string>
    <string name="top_bidder_button">TOP BIDDER</string>
    <string name="top_bidder_id">BIDDER123</string>
    <string name="top_bidder_detail">TOP BIDDER</string>
    <string name="bid_confirm_title">Hurry, someone else is coming</string>
    <string name="bid_confirm_message">Will you go for the bid?</string>
    <string name="bid_confirm_yes">Yes</string>
    <string name="bid_confirm_no">No</string>
    <string name="login_id">ID</string>
    <string name="login_pw">PW</string>
    <string name="join_pw_check">PW Check</string>
    <string name="login_button">Login</string>
    <string name="signup_button">Sign Up</string>
    <string name="add_comment_field">Add comment</string>
    <string name="add_comment_text">+</string>
    <string name="login_please_title">And you are..?</string>
    <string name="login_please_message">You need to login to bid!</string>

</resources>
