<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:hint="@string/login_id"
        android:id="@+id/LoginID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:hint="@string/login_pw"
        android:id="@+id/LoginPW"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:gravity="center"
        android:layout_gravity="center"
        style="@style/MyButton"
        android:id="@+id/login_button"
        android:text="@string/login_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Or"/>
    <Button
        android:gravity="center"
        android:layout_gravity="center"
        style="@style/MyButton"
        android:id="@+id/signup_button"
        android:text="@string/signup_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content" />
</LinearLayout>